style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

@media only screen and (max-width: 768px){
body{
    height: 100vh;
    width: 100vw;
    overflow-x: hidden;
}

/* Button */
.burger{
    height: 8vh;
    width: 14vw;
    position: absolute;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: black;
}

#line1{
    background-color: white;
    height: 6px;
    width: 40px;
    margin: 3px;
}

#line2{
    background-color: white;
    height: 6px;
    width: 40px;
    margin: 3px;
}

#line3{
    background-color: white;
    height: 6px;
    width: 40px;
    margin: 3px;
}

/* Nav */
nav{
    height: 92vh;
    width: 100vw;
    position: absolute;
    top: 8vh;
    background: #d4d4d4;
    transform: translateX(100%);
    transition: 0.5s ease-in-out;
    color: white;
}

.inputGoals{
    height: 45vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.depositAmount{
    height: 35vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.input{
    margin: 8px;
    width: 65vw;
    height: 35px;
    font-size: 1.1rem;
    padding: 10px;
    border: 2px solid gray;
    border-radius: 35px;
}

/* JS Classes */
.active{
    transform: translateX(0%);
}
}

